--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<title>Your HTML Title</title>
+<style>
+body {
+  background-color: #D3D3D3;
+  font-family: Arial, sans-serif;
+}
+</style>
 </head>
 <body>
-Hello, world!
+
+<h1>Welcome to My Personal Website</h1>
+
+<p>This is a technical style personal website. Here you will find information about my skills, projects, and professional experience.</p>
+
 </body>
 </html>
